# vibe-blocks-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  PLUGIN.md  README.md  SETUP_JP.md  aftman.toml  main.py  pyproject.toml  requirements.txt  server.sh
docs/: ai_agent_guidelines.md  setup_jp.md
roblox_mcp_plugin/: .gitignore  README.md  VibeBlocksMCP_Companion.rbxm  default.project.json
roblox_mcp_plugin/src/: Plugin.server.lua
src/roblox_mcp/: __init__.py  config.py  roblox_client.py  server.py  sse.py
